First blog post

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Lost Random
 description: 'Quixotic dabbler of esoteric arcana...'
 url: 'https://alexperucchini.github.io/'
-baseurl: '/lost-random'
+baseurl: ''
 
 author:
   name: 'Alex Perucchini'
