--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ header_pages:
   - about.md
   - contact.md
 
-footer: 'follow me <a href="https://twitter.com/GrognardCoder">twitter</a>'
+footer: '&#9400; ali3nlabs:2020 Alex Perucchini'
 
 #style: light # dark (default) or light
 #listen_for_clients_preferred_style: true # true or false (default)
