--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 header_pages:
   - index.md
-  - about.md
+  # - about.md
   - contact.md
 
-footer: '&#9400; ali3nlabs:2022 Alex Perucchini'
+footer: '&#9400; ali3nlabs:2023 Alex Perucchini'
 
 #style: light # dark (default) or light
 #listen_for_clients_preferred_style: true # true or false (default)
